2007-12-20  Luca Bruno  <lethalman88@gmail.com>

	* tests/stsupport/TestCStruct.st (assertField): test float and doubles

	* tests/testforeignstruct.c (main): test float and doubles

	* syx/syx-primitives.c (CStructFieldType_sizeOfPointer): added
	(CStructFieldType_sizeOfLong): added

	* st/foreign/CStructFieldType.st: added C types sizes in bytes and long/pointer primitives to retrieve the size.
        * st/foreign/CStruct.st

2007-12-19  Luca Bruno  <lethalman88@gmail.com>

	* SConstruct: merge CFLAGS
	use gcc as preferred compiler
	merge CC LINK and AR

	* share/syximage.desktop: added comment translation, updated to latest standards and do not display the entry in the menus (thanks to Thilo Pfennig)

	* share/syx.desktop: added comment translation and updated to latest standards (thanks to Thilo Pfennig)

	* syx/syx-init.c (syx_init): give precedence to the given root directory

	* configure.ac: removed unuseful line

	* tests/stsupport/TestCStruct.st:
	Created Test1Struct, Test2Struct and Test3Struct for testing read/write accessors.
	(expectOffsets:from:): renamed to testOffsets:from:
	(testOffsets:from:):
	(testRead): added
	(testWrite): added

	* tests/testforeignstruct.c (main): create read/write tests

	* st/foreign/CStruct.st (primOn:type:at): added
	(primOn:type:at:put): added
	
	* st/foreign/CStructFieldSpec.st (compileAccessorsOn): added

	* st/foreign/CStructGenerator.st (compileAccessorsOn): implemented

	* st/foreign/CStructFieldType.st (compileAccessorsOn:named:atOffset): added
	(compileReadAccessorsOn:named:atOffset): added
	(compileWriteAccessorsOn:named:atOffset): added
        (initialize): largeInteger renamed to long

	* syx/syx-primitives.c (CStruct_on_type_at): added
	(CStruct_on_type_at_put): added

	* syx/syx-object.h: 

	* syx/syx-object.c (syx_class_initialize): renamed to syx_object_initialize
	(syx_object_initialize): added
	
2007-12-18  Luca Bruno  <lethalman88@gmail.com>
